--- a/style.css
+++ b/style.css
@@ -7,12 +7,14 @@
 
 #color-palette {
     border: 1px solid black;
-    width: 50%;
+    width: 25%;
     margin: auto;
 }
 
 div.color {
     display: inline-block;
+    margin: 10px;
+    padding: 3px;
     width: 50px;
     height: 50px;
 }
