--- a/style.css
+++ b/style.css
@@ -18,3 +18,9 @@ div.color {
     width: 50px;
     height: 50px;
 }
+
+#button-random-color {
+    position: relative;
+    left: 45%;
+    top: 10px;
+}
